--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
-language: java
-script: ./gradlew clean build jacocoTestReport
-jdk: oraclejdk7
+language: groovy
+script: ./gradlew clean build
+jdk: oraclejdk8
 env: TERM=dumb
-after_success: ./gradlew coveralls
+after_success: ./gradlew
