--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,7 @@ language: groovy
 script: ./gradlew clean build
 jdk: oraclejdk8
 env: TERM=dumb
-after_success: ./gradlew
+addons:
+  postgresql: "9.4"
+before_script:
+  - psql -c 'create database weathervane;' -U postgres
