--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,17 @@ language: groovy
 script: ./gradlew clean build
 jdk: oraclejdk8
 env: TERM=dumb
+
 addons:
   postgresql: "9.4"
+
 before_script:
   - psql -c 'create database weathervane;' -U postgres
+
+cache:
+  directories:
+    - $HOME/.gradle/caches/2.14
+    - $HOME/.gradle/caches/jars-1
+    - $HOME/.gradle/daemon
+    - $HOME/.gradle/native
+    - $HOME/.gradle/wrapper
