--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_script:
 
 cache:
   directories:
+    - $HOME/.m2
     - $HOME/.gradle/caches/2.14
     - $HOME/.gradle/caches/jars-1
     - $HOME/.gradle/daemon
