ok travis, what's your file path?

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,12 @@ task sourcesJar(type: Jar) {
     from sourceSets.main.allSource
 }
 
+test {
+    testLogging {
+        showStandardStreams = true
+    }
+}
+
 task copyTestResources(type: Copy) {
     from "${projectDir}/src/test/resources"
     into "${buildDir}/classes/test"
