--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,8 @@ task sourcesJar(type: Jar) {
 
 test {
     testLogging {
+        events "failed"
+        exceptionFormat "short"
         showStandardStreams = true
     }
 }
